<resources>
    <string name="app_name" translatable="false">e-contact</string>
    <string name="in_work">In work</string>
    <string name="utility_sector">Utility Sector</string>
    <string name="created">Created</string>
    <string name="registered">Registered</string>
    <string name="solve_till">Solve until</string>
    <string name="responsible">Responsible</string>
    <string name="first_stub_date">February 25, 2016</string>
    <string name="second_stub_date">February 26, 2016</string>
    <string name="third_stub_date">February 29, 2016</string>
    <string name="responsible_stub">Dnipropetrovskiy MVK</string>
    <string name="description_stub">Opened hatch (near by the billboard), the area of 18 and 19 trams turn to the Mir avenue from the Donetsk roadway</string>
    <string name="image_view_content_description">Photo of incident</string>
    <string name="occasion_code_stub" translatable="false">CE-1257218</string>
    <string name="days_gone_after_creation_format" translatable="false">%1$d %2$s ago</string>
    <string name="landscaping_building">Landscaping and building</string>
    <string name="other">Other</string>
    <string name="all_tickets">All tickets</string>
    <string name="done">Done</string>
    <string name="waiting">Waiting</string>
    <string name="filter">Filter</string>
    <string name="requests_on_map">Requests on map</string>
    <string name="authors">Made with love\n<a href="http://itruh.dp.ua">IT Ruh Dnipro</a> and <a href="https://yalantis.com/">Yalantis</a></string>
    <string name="login_into_account">Login into account</string>

    <plurals name="days_plural">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
</resources>
